<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_bottom_navigation_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_24"/>
    <item
        android:id="@+id/menu_bottom_navigation_chats"
        android:title="@string/chats"
        android:icon="@drawable/ic_chat_24"/>
    <item
        android:id="@+id/menu_bottom_navigation_camera"
        android:title="@string/camera"
        android:icon="@drawable/ic_baseline_camera_alt_24"/>
    <item
        android:id="@+id/menu_bottom_navigation_my_ads"
        android:title="@string/my_ads"
        android:icon="@drawable/ic_baseline_ad_units_24"/>
    <item
        android:id="@+id/menu_bottom_navigation_account"
        android:title="@string/account"
        android:icon="@drawable/ic_baseline_person_24"/>




</menu>