<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    android:theme="@style/AddActivityStyle"
    tools:context=".AddPostActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@color/Primary_text"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/image1"
                        style="@style/AddPhoto"
                        android:contentDescription="@string/app_name" />

                    <ImageView
                        android:id="@+id/image2"
                        style="@style/AddPhoto"
                        android:layout_marginHorizontal="8dp"
                        android:contentDescription="@string/app_name" />

                    <ImageView
                        android:id="@+id/image3"
                        style="@style/AddPhoto"
                        android:contentDescription="@string/app_name" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Add_Spinner_Governorate_Layout"
                style="@style/AutoCompleteTextLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <AutoCompleteTextView
                    android:id="@+id/Add_Spinner_Governorate"
                    style="@style/AutoCompleteTextStyle"
                    android:hint="@string/select_your_governorate" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Add_Spinner_Type_Layout"
                style="@style/AutoCompleteTextLayoutStyle"
                android:layout_marginTop="12dp">

                <AutoCompleteTextView
                    android:id="@+id/Add_Spinner_Type"
                    style="@style/AutoCompleteTextStyle"
                    android:hint="@string/select_type"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingStart="4dp"
                android:text="@string/is_your_product_new_or_old"
                android:textColor="@color/gray_80"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/Add_Toggle_New_Old"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:checkedButton="@id/Add_Toggle_New"
                app:materialThemeOverlay="@style/AddActivity_Toggle_Group_Style"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/Add_Toggle_New"
                    style="@style/AddActivity_Button_Style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/new_new" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/Add_Toggle_Old"
                    style="@style/AddActivity_Button_Style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/old"
                    app:toggleCheckedStateOnClick="true" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingStart="4dp"
                android:text="@string/is_your_product_for_sale_of_for_rent"
                android:textColor="@color/gray_80"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/Add_Toggle_Sale_Rent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:checkedButton="@id/Add_Toggle_Sale"
                app:materialThemeOverlay="@style/AddActivity_Toggle_Group_Style"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/Add_Toggle_Sale"
                    style="@style/AddActivity_Button_Style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/for_sale" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/Add_Toggle_Rent"
                    style="@style/AddActivity_Button_Style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/for_rent"
                    app:toggleCheckedStateOnClick="true" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="4dp"
                android:paddingStart="4dp"
                android:text="@string/please_enter_the_price_and_choose_the_currency"
                android:textColor="@color/gray_80"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Add_EditText_Price_Layout"
                    style="@style/ETLayout"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="1"
                    android:gravity="start|top"
                    android:hint="@string/price"
                    app:boxBackgroundColor="@color/Primary_text"
                    app:boxCornerRadiusBottomEnd="42dp"
                    app:boxStrokeColor="@color/main"
                    app:endIconTint="@color/main"
                    app:expandedHintEnabled="false"
                    app:hintEnabled="true"
                    app:hintTextColor="@color/main">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Add_EditText_Price"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="start|top"
                        android:hint="@string/price"
                        android:inputType="numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/Add_Toggle_Dollar_Dinar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    app:checkedButton="@id/Add_Toggle_Dollar"
                    app:materialThemeOverlay="@style/AddActivity_Toggle_Group_Style"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/Add_Toggle_Dollar"
                        style="@style/AddActivity_Button_Style"
                        android:layout_width="wrap_content"
                        android:layout_height="64dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="-6dp"
                        android:layout_marginBottom="-6dp"
                        android:text="@string/dollar_sign" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/Add_Toggle_Dinar"
                        style="@style/AddActivity_Button_Style"
                        android:layout_width="wrap_content"
                        android:layout_height="64dp"
                        android:layout_gravity="center"
                        android:text="@string/iqd"

                        app:toggleCheckedStateOnClick="true" />
                </com.google.android.material.button.MaterialButtonToggleGroup>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Add_EditText_Phone_Layout"
                style="@style/ETLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="start|top"
                android:hint="@string/phone"
                app:boxBackgroundColor="@color/Primary_text"
                app:boxCornerRadiusBottomEnd="42dp"
                app:boxStrokeColor="@color/main"
                app:endIconTint="@color/main"
                app:expandedHintEnabled="false"
                app:hintEnabled="true"
                app:hintTextColor="@color/main">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Add_EditText_Phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|top"
                    android:hint="@string/please_enter_a_valid_phone_number"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Add_EditText_Details_Layout"
                style="@style/ETLayout"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="12dp"
                android:gravity="start|top"
                android:hint="@string/details"
                app:boxBackgroundColor="@color/Primary_text"
                app:boxCornerRadiusBottomEnd="42dp"
                app:boxStrokeColor="@color/main"
                app:endIconTint="@color/main"
                app:expandedHintEnabled="false"
                app:hintEnabled="true"
                app:hintTextColor="@color/main">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Add_EditText_Details"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|top"
                    android:hint="@string/type_more_information_here_about_your_product" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/add_ad_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/main"
        android:text="@string/publish"
        android:textSize="24sp" />
</LinearLayout>