<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="12dp"

    tools:context=".LoginPages.authenitcation_activty">

    <Button
        android:id="@+id/btn_authentication_gmail"
        style="@style/gmailButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/gmail"
        android:textColor="#DA031C"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_authentication_facbook"
        style="@style/MyFacebookButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:padding="4dp"
        android:text="@string/facebook"
        android:textColor="#3F51B5"

        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_authentication_email1"
        style="@style/emailButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/email"
        android:textColor="#808080"

        android:textSize="20sp" />

</LinearLayout>