<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="12dp"
        app:cardCornerRadius="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:id="@+id/show_item_image_view"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/car_image"
                    android:contentDescription="@string/app_name" />
<!--                type, details and governorate layout-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="12dp">
                    <TextView
                        android:id="@+id/show_item_tv_type"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:textSize="24sp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:maxLines="1"
                        android:text="@string/type"
                        />
                    <TextView
                        android:id="@+id/show_item_tv_details"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:textSize="24sp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:maxLines="1"
                        android:text="@string/details"
                        />
                    <TextView
                        android:id="@+id/show_item_tv_governorate"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:textSize="24sp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:maxLines="1"
                        android:text="@string/governorate"
                        />
                </LinearLayout>
            </LinearLayout>


<!--                price and images number layout_weight-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="#80000000"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/show_item_tv_image_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/_14"
                    android:drawablePadding="4dp"
                    android:paddingStart="8dp"
                    android:drawableStart="@drawable/ic_baseline_image_24"
                    tools:ignore="UseCompatTextViewDrawableXml" />
                <TextView
                    android:id="@+id/show_item_tv_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_31_682_000"
                    android:textColor="@color/main"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:layout_marginHorizontal="12dp"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_075164438xx"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:iconTint="@color/white"
                    android:layout_weight="1"
                    app:icon="@drawable/ic_baseline_call_24"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat"
                    android:textSize="18sp"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/main"
                    android:layout_marginHorizontal="6dp"
                    app:iconTint="@color/main"
                    app:icon="@drawable/ic_chat_24"
                    />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:gravity="center"
                    app:iconPadding="0dp"
                    app:buttonTint="@color/main"

                    android:button="@drawable/check_box_style"
                     />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp"/>


</LinearLayout>